kubernetes/02-apps/mongo-express/service.yaml
# kubernetes/02-apps/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: homelab
  labels:
    app.kubernetes.io/name: mongo-express
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongo-express
  ports:
  - name: http
    port: 8081
    targetPort: http
    protocol: TCP
